<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/step_category_key"
        android:title="@string/step_title">
        <ListPreference
            android:defaultValue="@string/default_step_value"
            android:entries="@array/step_names"
            android:entryValues="@array/step_values"
            android:key="@string/step_key"
            android:summary="@string/default_step_name"
            android:title="@string/step_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/regions_category_key"
        android:title="@string/regions_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="false"
            android:key="@string/region_blue_key"
            android:title="@string/region_blue_value" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/region_brown_key"
            android:title="@string/region_brown_value" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/region_green_key"
            android:title="@string/region_green_value" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/region_purple_key"
            android:title="@string/region_purple_value" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/region_red_key"
            android:title="@string/region_red_value" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/region_teal_key"
            android:title="@string/region_teal_value" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/region_yellow_key"
            android:title="@string/region_yellow_value" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/country_category_key"
        android:title="@string/country_title">
        <ListPreference
            android:defaultValue="@string/default_country_value"
            android:entries="@array/country_names"
            android:entryValues="@array/country_values"
            android:key="@string/country_key"
            android:summary="@string/default_country_name"
            android:title="@string/country_title" />
    </PreferenceCategory>
</PreferenceScreen>