<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context="com.thirtyonetensoftware.android.powergridengineer.activity.MainActivity">

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_action_discard"
        app:showAsAction="ifRoom|withText"
        android:title="@string/action_clear"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_action_about"
        app:showAsAction="never"
        android:title="@string/action_info"/>
</menu>
