<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.thirtyonetensoftware.android.powergridengineer.fragment.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical"
            android:text="@string/from"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.thirtyonetensoftware.android.powergridengineer.widget.PGESpinner
            android:id="@+id/source_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical"
            android:text="@string/to"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.thirtyonetensoftware.android.powergridengineer.widget.PGESpinner
            android:id="@+id/destination_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center_vertical"
            android:text="@string/cost"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cost_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#ffff6b0e"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/calculations_listview"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />
</LinearLayout>
